# nixos-harden-systemd

./: .gitignore  LICENSE  README.md  all-tests-hooked.nix  default.nix  failed  make-test-python-hooked.nix  printInfo.nix  run.oil
nix-codemod/: Cargo.toml  README.md  default.nix  shell.nix
nix-codemod/src/: edit.rs  main.rs  walkers.rs
nix-codemod/src/commands/: edit_systemd_service.rs  find_all_tests.rs  is_test_well_formed.rs  list_systemd_services.rs  mod.rs  print_systemd_service_config.rs
