[package]
name = "nix-codemod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.10.1"
serde = { version = "^1.0.100", features = [ "derive" ] }
serde_json = "1.0.81"
clap = { version = "3.1.14", features = [ "derive" ] }
pretty_assertions = "^1.2.1"
